# kmms_prog_2023

./: .gitignore  build.bat
projects/: CMakeLists.txt
projects/SmartSort/: CMakeLists.txt  bubble_sort.cpp  bubble_sort.hpp  io_array.cpp  io_array.hpp  main.cpp  run_bubble_sort.bat
projects/obuchaiika/: CMakeLists.txt
projects/obuchaiika/matematika/: matematika.vcxproj  menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
projects/prefix_sum/: CMakeLists.txt  run_prefix_sum.bat  vbagrov_insert_sort.cpp
projects/scl/src/: CMakeLists.txt
projects/scl/src/long_number/: CmakeLists.txt  long_number.cpp  long_number.hpp
projects/scl/test/long_number/: CmakeLists.txt  test_long_number.cpp
projects/unit_test_SmartSort/: CMakeLists.txt
projects/unit_test_SmartSort/src/: CMakeLists.txt
projects/unit_test_SmartSort/test/: CMakeLists.txt  test_smartsort.cpp
projects/zachet/: CMakeLists.txt  run_zachet.bat  vbagrov_practice.cpp
